<resources>
    <string name="app_name">JIT</string>

    <string name="action_settings">Settings</string>
    <string name="action_get_help">Get Help</string>
    <string name="action_behaviors">Behaviors</string>
    <string name="action_rational_thought">Rational Thought</string>
    <string name="action_motivation">Motivation</string>
    <string name="action_goals">Goals</string>
    <string name="goalsBtnText">Goals</string>
    <string name="motivationBtnText">Motivation</string>
    <string name="rationalThinkingBtnText">Rational Thinking</string>
    <string name="behaviorsBtnText">Behaviors</string>
    <string name="mainBackgroundColor">#222</string>
    <string name="title_activity_behavior">Behaviors</string>
    <string name="PARENTID_DOES_NOT_EXIT">-1</string>
    <string name="PARENT_NAME_DOES_NOT_EXIT">N/A</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_single_behavior">SingleBehaviorActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_behavior">Add New Behavior</string>
    <string name="behaviorNameLabel">Behavior Name:</string>
    <string name="addBtnText">Add</string>
    <string name="SelectedBehavior">BehaviorName</string>
    <string name="addNewButtonType">addNewButtonType</string>
    <string name="title_activity_two_section">TwoSectionActivity</string>

    <!-- These are indicies used in switch statements to determine which view or activity to call-->
    <string name="HOME_ACTIVITY_HOME_FRAGMENT_INDEX">1</string>
    <string name="HOME_ACTIVITY_SELECTED_BEHAVIOR_INDEX">2</string>


    <string name="BEHAVIOR_SECTION_INDEX">0</string>
    <string name="RATIONAL_THOUGHT_SECTION_INDEX">1</string>
    <string name="MOTIVATION_SECTION_INDEX">2</string>
    <string name="GOALS_SECTION_INDEX">3</string>

    <string name="TWO_SECTION_BEHAVIOR_INDEX">0</string>
    <string name="TWO_SECTION_TRIGGER_INDEX">1</string>
    <string name="TWO_SECTION_CONSEQUENCE_INDEX">2</string>
    <string name="TWO_SECTION_SHUTDOWN_INDEX">3</string>
    <string name="TWO_SECTION_RATIONALIZATION_INDEX">4</string>
    <string name="TWO_SECTION_ALTERNATIVE_INDEX">5</string>
    <string name="TWO_SECTION_LOGICALRESPONSE_INDEX">6</string>

    <!-- These are indicies used in switch statements to determine which new item type is to be created-->
    <string name="NEW_ITEM_TYPE_BEHAVIOR_INDEX">0</string>
    <string name="NEW_ITEM_TYPE_TRIGGER_INDEX">1</string>
    <string name="NEW_ITEM_TYPE_CONSEQUENCE_INDEX">2</string>
    <string name="NEW_ITEM_TYPE_SHUTDOWN_INDEX">3</string>
    <string name="NEW_ITEM_TYPE_RATIONALIZATION_INDEX">4</string>
    <string name="NEW_ITEM_TYPE_ALTERNATIVE_INDEX">5</string>
    <string name="NEW_ITEM_TYPE_LOGICALRESPONSE_INDEX">6</string>

    <string name="EDIT_ITEM_TYPE_BEHAVIOR_INDEX">0</string>
    <string name="EDIT_ITEM_TYPE_TRIGGER_INDEX">1</string>
    <string name="EDIT_ITEM_TYPE_CONSEQUENCE_INDEX">2</string>
    <string name="EDIT_ITEM_TYPE_SHUTDOWN_INDEX">3</string>
    <string name="EDIT_ITEM_TYPE_RATIONALIZATION_INDEX">4</string>
    <string name="EDIT_ITEM_TYPE_ALTERNATIVE_INDEX">5</string>
    <string name="EDIT_ITEM_TYPE_LOGICALRESPONSE_INDEX">6</string>

    <string name="BEHAVIOR_INDEX">0</string>
    <string name="TRIGGER_INDEX">1</string>

    <string name="ROUTING_INDEX_BEHAVIOR">0</string>
    <string name="ROUTING_INDEX_TRIGGER">1</string>
    <string name="ROUTING_INDEX_CONSEQUENCE">2</string>
    <string name="ROUTING_INDEX_ALTERNATIVE">5</string>

    <string name="PAGE_HEADER_EXPLANATION_BEHAVIOR">Harmful Behaviors</string>
    <string name="PAGE_HEADER_DESCRIPTION_BEHAVIOR">I\'m not happy with these behaviors.</string>

    <string name="PAGE_HEADER_EXPLANATION_TRIGGER">Watch out for these triggers!</string>
    <string name="PAGE_HEADER_EXPLANATION_SHUTDOWN">Shut down that trigger NOW!</string>
    <string name="PAGE_HEADER_EXPLANATION_RATIONALIZATION">I\'ll tell myself anything!</string>
    <string name="PAGE_HEADER_EXPLANATION_LOGICALRESPONSE">It\'s a LIE!  And here\'s why:</string>
    <string name="PAGE_HEADER_EXPLANATION_ALTERNATIVE">I\'ll do something different instead!</string>
    <string name="PAGE_HEADER_EXPLANATION_CONSEQUENCE">Look at what will happen!</string>
</resources>
