<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/behaviorsBtnText"
        android:textSize="30dp"
        android:textColor="#DDD"
        android:id="@+id/behaviorsBtnHome"
        android:minWidth="88dp"
        android:height="36dp"
        android:background="@drawable/home_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/rationalThinkingBtnText"
        android:textSize="30dp"
        android:textColor="#DDD"
        android:id="@+id/rationalThinkingBtnHome"
        android:minWidth="88dp"
        android:height="36dp"
        android:background="@drawable/home_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/motivationBtnText"
        android:textSize="30dp"
        android:textColor="#DDD"
        android:id="@+id/motivationBtnHome"
        android:minWidth="88dp"
        android:height="36dp"
        android:background="@drawable/home_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/goalsBtnText"
        android:textSize="30dp"
        android:textColor="#DDD"
        android:id="@+id/goalsBtnHome"
        android:minWidth="88dp"
        android:height="36dp"
        android:background="@drawable/home_btn"
        />

</LinearLayout>